--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
 }
 
 .contenedorOpciones{
-    background-color: #5B7A94;
+    background-color: #002ccc;
     width: 20%;
     padding: 10px;
     display: flex;
@@ -42,16 +42,21 @@
 .tituloOpciones{
     padding: 20px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
 }
 
 .contenedorTitulo{
-    width: 50%;
+    width: 70%;
     display: flex;
 }
 .btnTitulo{
     width: 10%;
     padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 input[type="button"]{
     /* outline: none; */
@@ -64,7 +69,7 @@ input[type="button"]{
     border-radius: 20px;
 }
 .tituloOpcion{
-    width: 90%;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -81,16 +86,18 @@ input[type="button"]{
 /* GLOSARIO */
 
 .glosario{
-    padding: 20px;
+    padding: 10px;
     display: flex;
     justify-content: center;
+    width: 50%;
 }
 
 .contenedorGlosario{
-    background-color: #5B7A94;
+    background-color: #002ccc;
     padding: 10px;
-    width: 50%;
-    border-radius: 20px;
+    width: 80%;
+    border-radius: 10px;
+    color: white;
 }
 
 #glosarioQRA{
@@ -291,6 +298,24 @@ details{
     .fc{
         width: 80%;
     }
-    
+
+    /**/
+
+    .contenedorTitulo{
+        width: 100%;
+        flex-wrap: wrap;
+    }
+
+    .btnTitulo{
+        width: 100%;
+    }
+
+    .tituloOpcion{
+        width: 100%;
+    }
+
+    .glosario{
+        width: 100%;
+    }
 
 }
