--- a/style.css
+++ b/style.css
@@ -199,6 +199,12 @@ select{
     justify-content: space-between;
 }
 
+.cajasContenedorSeleccionesMultiples{
+    display: flex;
+    justify-content: center;
+}
+
+
 .materiaReclamable{
     width: 42%;
     padding: 10px;
