--- a/style.css
+++ b/style.css
@@ -53,7 +53,6 @@
     padding: 10px;
     cursor: pointer;
     /* box-shadow: 1px 1px 1px 1px black; */
-    background-color: #002ccc;
     color: white;
     transition: transform 0.3s ease-in-out; /* Transición suave para el cambio de tamaño */
 }
@@ -63,6 +62,9 @@
     margin-top: 10px;
     text-align: justify;
     height: 80%;
+    border: 1px solid #002ccc;
+    background-color: white;
+    color: #002ccc;
 }
 
 .contenedorTituloDescripcion:hover{
@@ -209,16 +211,6 @@ label{
     width: 100%;
 }
 
-/* select{
-    width: 100%;
-    margin-top: 10px;
-    border-radius: 10px;
-    padding: 15px;
-    border: none;
-    outline: none;
-    background-color: aliceblue;
-} */
-
 /* continuar , despues de los datos personales*/
 
 .btnContinuar{
@@ -363,7 +355,12 @@ details{
 }
 /**/
 
-
+.contenedorHijo{
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    flex-wrap: wrap;
+}
 
 
 /**/
