--- a/style.css
+++ b/style.css
@@ -381,6 +381,53 @@ details{
     justify-content: center;
 }
 
+/*carga*/
+
+.contenedorLoading{
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(255, 255, 255, 0.5); /* Fondo semi-transparente */
+    backdrop-filter: blur(10px);
+}
+
+.loader{
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    animation: spin 1.2s linear infinite;
+}
+
+.loader::before,
+.loader::after{
+    content: '';
+    position: absolute;
+    border-radius: inherit;
+}
+
+.loader::before{
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(0deg,#002ccc 30%,#ff4c00 70%);
+}
+
+.loader::after{
+    width: 85%;
+    height: 85%;
+    background-color: white;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+
+@keyframes spin {
+    to{
+        transform: rotate(360deg);
+    }
+}
 
 /**/
 
